<?xml version="1.0"?>
<package format="2">
  <name>my_robot_demo</name>
  <version>0.0.0</version>
  <description>The my_robot_demo package</description>
  <author email ="r.munninz@gmail.com">Ryan Munnings</author>
  <maintainer email="r.munninz@gmail.com">Ryan Munnings</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
